@@ -43,6 +43,7 @@ Verilator 5.017 devel
 * Fix shift to remove operation side effects (#4563).
 * Fix compile warning on unused member function variable (#4567).
 * Fix method narrowing conversion compiler error (#4568).
+* Fix display optimization ignoring side effects (#4585).
 * Fix preprocessor to show `line 2 on resumed file.
 
 
